--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,9 +1,9 @@
 .place__title{
-    display: flex;
-    justify-self: start;
-    align-items: center;
+   display: flex;
+   justify-self: start;
+   align-items: center;
    max-width: 460px;
-   min-height: 152PX;
+   min-height: 152px;
    font-style: normal;
    font-size: 72px;
    line-height: 1;
