--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 77px;
+    width: 77px;
     height: 28px;
     font-style: normal;
     font-weight: normal;
