--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,7 +5,32 @@
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 122%;
     text-align: center;
     overflow: hidden;
    }
+
+   @media screen and (max-width: 1024px){
+    .cover__subtitle{
+        margin: 0 332px;
+      }
+   }
+
+   @media screen and (max-width: 768px){
+    .cover__subtitle{
+        margin: 0 204px;
+      }
+   }
+
+   @media screen and (max-width: 320px){
+    .cover__subtitle{
+        margin: 16px 16px 0;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 114%;
+        text-align: center;
+      }
+   }
+
+   
