--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,3 +7,11 @@
     color: #FFFFFF;
     margin-right: 18px;
    }
+
+   @media screen and (max-width: 320px) {
+    .footer__link{
+     font-size: 24px;
+     line-height: 1;
+    }
+ 
+   }
