--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,3 +2,13 @@
     display: flex;
     justify-content: flex-start;
   }
+
+  @media screen and (max-width: 320px){
+    .footer__links{
+      max-width: 186px;
+      min-height: 310px;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: flex-start;
+    }
+  }
