--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,17 @@
     justify-content: space-between;
     align-items: flex-end;
     max-width: 1184px;
-    min-height: 80px;
-    margin: 28px 48px 0;
+    min-height: 52px;
+    margin: 0 auto;
+    padding-top: 28px;
     
+  }
+
+  @media screen and (max-width: 320px){
+    .header{
+      max-width: 288px;
+      min-height: 42px;
+      margin: 0 auto;
+      padding-top: 16px;
+    }
   }
