--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,11 +2,10 @@
     margin: 33px 0 0;
     padding: 0;
     width: 100%;
-    min-height: 90px;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
-    line-height: 18px;
+    line-height: 150%;
     list-style-type:none;
     overflow: hidden;
    }
