--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,9 +1,16 @@
 .intro__title{
     width: 100%;
-    min-height: 58px;
     font-style: normal;
     font-size: 54px;
     line-height: 109%;
     margin: 0;
     overflow: hidden;
+   }
+
+   @media screen and (max-width: 320px){
+    .intro__title{
+        font-style: normal;
+        font-size: 32px;
+        line-height: 109%;
+       }
    }
