--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,5 +1,27 @@
 .intro{
     max-width: 690px;
-    min-height: 429px;
     margin: 92px 0 0 148px;
    }
+
+   @media screen and (max-width: 1024px){
+    .intro{
+        margin-left: 48px;
+      }
+   }
+
+   @media screen and (max-width: 768px){
+    .intro{
+      margin-left: 24px;
+    }
+
+   }
+
+   @media screen and (max-width: 320px){
+    .intro{
+      max-width: 288px;
+      margin: 0 16px;
+     }
+
+   }
+
+   
