--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,10 +1,15 @@
 .lead__caption{
     width: 158px;
-    height: 14px;
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
-    line-height: 14px;
+    line-height: 140%;
     align-items: flex-start;
     margin-top: 8px;
+   }
+
+   @media screen and (max-width: 768px){
+    .lead__caption{
+        margin-left: 24px;
+      }
    }
