--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,21 @@
 .lead__subtitle{
     max-width: 640px;
-    height: 72px;
     font-style: normal;
     font-weight: normal;
     font-size: 30px;
-    line-height: 36px;
+    line-height: 120%;
     text-align: center;
     margin: 32px auto 0;
   } 
+
+  @media screen and (max-width: 320px){
+    .lead__subtitle{
+      max-width: 288px;
+      margin-top: 16px;
+     font-style: normal;
+     font-weight: normal;
+     font-size: 16px;
+     line-height: 125%;
+     text-align: center;
+    }
+  }
