--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,27 @@
 .lead{
     max-width: 984px;
-    min-height: 1005px;
     margin: 56px 148px 0;
+  }
+
+  @media screen and (max-width: 1024px){
+    .lead{
+      max-width: 928px;
+      min-height: 962px;
+      margin: 48px 48px 0;
+    }
+  }
+
+  @media screen and (max-width: 768px){
+    .lead{
+      margin: 0 auto;
+      min-height: 862px;
+    }
+  }
+
+  @media screen and (max-width: 320px){
+    .lead{
+      width: 100%;
+      min-height: 406px;
+      margin-top: 48px;
+    }
   }
