--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,10 +1,45 @@
 .photo-grid{
+    position: relative;
     max-width: 1184px;
-    min-height: 671px;
-    margin: 92px 48px;
+    margin: 92px 48px 92px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 213px);
     column-gap: 16px;
     row-gap: 16px;
+    justify-items: stretch;
+    align-items: stretch;
+    
+  }
+
+  @media screen and (max-width: 1024px){
+    .photo-grid{
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(4, 225px);
+      column-gap: 14px;
+      row-gap: 14px;
+    }
+
+  }
+
+  @media screen and (max-width: 768px){
+    .photo-grid{
+      max-width: 720px;
+      margin: 88px 24px 88px;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(6, 264px);
+      
+    }
+
+  }
+
+  @media screen and (max-width: 320px){
+    .photo-grid{
+      margin: 64px 16px 0;
+      max-width: 288px;
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(12, 216px);
+      row-gap: 12px;
+      }
+
   }
