--- a/blocks/place/__article/place__article.css
+++ b/blocks/place/__article/place__article.css
@@ -1,5 +1,18 @@
 .place__article{
     max-width: 484px;
-    min-height: 460px;
     overflow: hidden;
+  }
+
+  @media screen and (max-width: 768px){
+    .place__article{
+      max-width: 352px;
+    }
+  }
+
+  @media screen and (max-width: 320px){
+    .place__article{
+      width: 288px;
+      margin: 0 auto;
+  
+     }
   }
