--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -3,5 +3,28 @@
     height: 460px;
     margin: 0;
     object-fit: cover;
-    object-position: center bottom;
+    object-position: center;
    }
+
+   @media screen and (max-width: 1024px) {
+    .place__image{
+      width: 440px;
+      height: 440px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .place__image{
+        width: 340px;
+        height: 340px;
+      }
+}
+
+   @media screen and (max-width: 320px){
+    .place__image{
+        width: 100%;
+        height: 320px;
+        overflow: hidden;
+      }
+   }
+   
