--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,9 +1,19 @@
 .place{
     width: 100%;
-    min-height: 584px;
     display: grid;
     grid-template-columns: repeat(2, 2fr);
     column-gap: 40px;
     row-gap: 48px;
     margin-bottom: 80px;
+   }
+
+   @media screen and (max-width: 320px){
+    .place{ 
+        display: flex;
+        flex-direction: column;
+        justify-items: flex-start;
+        align-items: flex-start;
+        max-width: 320px;
+        margin: 0; 
+       }
    }
