--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,3 +2,23 @@
     margin: 0 148px;
     max-width: 984px;
    }
+
+   @media screen and (max-width: 1024px) {
+    .places{
+        margin: 0 48px;
+        max-width: 928px;
+      }
+
+   @media screen and (max-width: 768px) {
+    .places{
+         margin: 0 24px;
+         max-width: 720px;
+       }
+
+   @media screen and (max-width: 320px){
+    .places{
+        max-width: 320px;
+        margin: 64px 0 0; 
+      }
+ 
+   }
