--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__image/header__image.css);
 @import url(../blocks/header/__lang/header__lang.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__link/_en/header__link_en.css);
@@ -41,10 +42,7 @@
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
-@import url(../vendor/media/media_screen_1024px.css);
-@import url(../vendor/media/media_screen_768px.css);
-@import url(../vendor/media/media_screen_320px.css);
- 
+@import url(../vendor/fonts/font.css);
  
  
  
