--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,6 @@
 .place__image{
-    width: 460px;
-    height: 460px;
+    max-width: 460px;
+    min-height: 460px;
     margin: 0;
     object-fit: cover;
     object-position: center;
@@ -8,15 +8,15 @@
 
    @media screen and (max-width: 1024px) {
     .place__image{
-      width: 440px;
-      height: 440px;
+      max-width: 440px;
+      min-height: 440px;
     }
 }
 
 @media screen and (max-width: 768px){
     .place__image{
-        width: 340px;
-        height: 340px;
+        max-width: 340px;
+        min-height: 340px;
       }
 }
 
