--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -8,12 +8,14 @@
         margin: 0 48px;
         max-width: 928px;
       }
+    }
 
    @media screen and (max-width: 768px) {
     .places{
          margin: 0 24px;
          max-width: 720px;
        }
+      }
 
    @media screen and (max-width: 320px){
     .places{
