--- a/blocks/photo-grid/__image/photo-grid__image.css
+++ b/blocks/photo-grid/__image/photo-grid__image.css
@@ -1,5 +1,30 @@
 .photo-grid_image{
-    width: 100%;
-    height: 100%;
+    width: 284px;
+    height: 213px;
     object-fit: cover;
+    object-position: center;
 }
+
+@media screen and (max-width: 1024px) {
+    .place__image{
+      max-width: 300px;
+      min-height: 225px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .place__image{
+        max-width: 352px;
+        min-height: 264px;
+      }
+}
+
+   @media screen and (max-width: 320px){
+    .place__image{
+        width: 288;
+        height: 216px;
+        
+      }
+   }
+
+ 
