--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,21 +1,22 @@
 .photo-grid{
-    position: relative;
+  
     max-width: 1184px;
     margin: 92px 48px 92px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
     grid-template-rows: repeat(3, 213px);
     column-gap: 16px;
     row-gap: 16px;
     justify-items: stretch;
     align-items: stretch;
     
+    
   }
 
   @media screen and (max-width: 1024px){
     .photo-grid{
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(4, 225px);
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-rows: repeat(4, 284px);
       column-gap: 14px;
       row-gap: 14px;
     }
@@ -26,7 +27,7 @@
     .photo-grid{
       max-width: 720px;
       margin: 88px 24px 88px;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
       grid-template-rows: repeat(6, 264px);
       
     }
@@ -37,7 +38,7 @@
     .photo-grid{
       margin: 64px 16px 0;
       max-width: 288px;
-      grid-template-columns: 1fr;
+      grid-template-columns: minmax(288px, 1fr) ;
       grid-template-rows: repeat(12, 216px);
       row-gap: 12px;
       }
