--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,31 +2,33 @@
     max-width: 560px;
     margin: 0 auto;
     font-style: normal;
+    font-weight: 900;
     font-size: 72px;
-    line-height: 1;
+    line-height: 106%;
     text-align: center;
-    overflow: hidden;
+    
+    
    }
 
    @media screen and (max-width: 1024px){
     .cover__title{
         margin: 0 232px;
+        font-size:7.03vw;
       }
    }
 
-   @media screen and (max-width: 768px){
+   @media screen and (max-width: 990px){
     .cover__title{
         margin: 0 104px;
-    
+        font-size: 9.38vw;
       }
    }
 
-   @media screen and (max-width: 320px){
+   @media screen and (max-width: 740px){
     .cover__title{
         margin: 0 16px;
-        font-style: normal;
         font-size: 32px;
         line-height: 109%;
-        text-align: center;
+        
       }
    }
