--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,22 +7,24 @@
     font-size: 18px;
     line-height: 122%;
     text-align: center;
-    overflow: hidden;
+    
    }
 
    @media screen and (max-width: 1024px){
     .cover__subtitle{
         margin: 0 332px;
+        font-size: 1.76vw;
       }
    }
 
-   @media screen and (max-width: 768px){
+   @media screen and (max-width: 990px){
     .cover__subtitle{
         margin: 0 204px;
+        font-size: 2.34vw;
       }
    }
 
-   @media screen and (max-width: 320px){
+   @media screen and (max-width: 740px){
     .cover__subtitle{
         margin: 16px 16px 0;
         font-style: normal;
