--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,16 +2,20 @@
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
-    line-height: 18px;
+    line-height: 112%;
     text-decoration: none;
     color: #FFFFFF;
     margin-right: 18px;
    }
 
+   .footer__link:hover{
+    opacity: 0.8;
+   }
+
    @media screen and (max-width: 320px) {
     .footer__link{
      font-size: 24px;
-     line-height: 1;
+     line-height: 100%;
     }
  
    }
