--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,11 +1,12 @@
 .footer__links{
     display: flex;
     justify-content: flex-start;
+    margin: 0;
   }
 
-  @media screen and (max-width: 320px){
+  @media screen and (max-width: 600px){
     .footer__links{
-      max-width: 186px;
+      max-width: 600px;
       min-height: 310px;
       flex-direction: column;
       justify-content: space-around;
