--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,4 +1,13 @@
 .header__link{
   width: 29px;
   color: #FFFFFF;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 117%;
+  text-decoration: none;
+}
+
+.header__link:hover{
+  opacity: .8;
 }
