--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,15 +1,15 @@
 .intro__title{
     width: 100%;
+    font-weight: 900;
     font-style: normal;
     font-size: 54px;
-    line-height: 109%;
+    line-height: 107%;
     margin: 0;
-    overflow: hidden;
+    
    }
 
    @media screen and (max-width: 320px){
     .intro__title{
-        font-style: normal;
         font-size: 32px;
         line-height: 109%;
        }
