--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,9 @@
 .page {
     max-width: 1280px;
     margin: 0 auto;
-    font-family: 'Inter', Arial, sans-serif;
+    font-family: 'Inter';
     background-color: #2A2C2F;
     color: #FFFFFF;
   }
+
+  
