--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -9,6 +9,7 @@
     row-gap: 16px;
     justify-items: stretch;
     align-items: stretch;
+    object-fit: cover;
     
     
   }
@@ -25,7 +26,7 @@
 
   @media screen and (max-width: 768px){
     .photo-grid{
-      max-width: 720px;
+      
       margin: 88px 24px 88px;
       grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
       grid-template-rows: repeat(6, 264px);
@@ -37,10 +38,15 @@
   @media screen and (max-width: 320px){
     .photo-grid{
       margin: 64px 16px 0;
-      max-width: 288px;
-      grid-template-columns: minmax(288px, 1fr);
+      max-width: 320px;
+      height: auto;
+     /* grid-template-columns: minmax(288px, 1fr);
       grid-template-rows: repeat(12, 216px);
-      row-gap: 12px;
+      row-gap: 12px;*/
+      display: flex;
+      flex-direction: column;
+      justify-items: center;
+      justify-items: center;
       }
 
   }
