--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -6,25 +6,25 @@
     object-position: center;
    }
 
-   @media screen and (max-width: 1024px) {
+   @media screen and (max-width: 1140px) {
     .place__image{
       max-width: 440px;
       min-height: 440px;
     }
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 940px){
     .place__image{
         max-width: 340px;
         min-height: 340px;
       }
 }
 
-   @media screen and (max-width: 320px){
+   @media screen and (max-width: 740px){
     .place__image{
         width: 100%;
         height: 320px;
-        overflow: hidden;
+        margin: 0 auto;
       }
    }
    
