--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,22 +3,19 @@
    justify-self: start;
    align-items: center;
    max-width: 460px;
+   font-weight: 900;
    font-style: normal;
    font-size: 72px;
-   line-height: 1;
+   line-height: 106%;
    margin: 0;
-   overflow: hidden;
+   
    }
 
-   @media screen and (max-width: 320px){
+   @media screen and (max-width: 740px){
       .place__title{
-         display: flex;
          justify-content: center;
-         align-items: center;
-         width: 288px;
          margin: 0 16px 56px;
-         font-style: normal;
          font-size: 32px;
-         line-height: 1;
+         line-height: 106%;
        }
    }
