--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -7,13 +7,27 @@
     margin-bottom: 80px;
    }
 
-   @media screen and (max-width: 320px){
+   @media screen and (max-width: 1024px){
+      .place{
+        max-width: 928px;
+      } 
+   
+   }
+
+   @media screen and (max-width: 768px){
+    .place{
+        max-width: 720px;
+      } 
+
+   }
+
+   @media screen and (max-width: 740px){
     .place{ 
+        width: 100%;
         display: flex;
         flex-direction: column;
-        justify-items: flex-start;
-        align-items: flex-start;
-        max-width: 320px;
-        margin: 0; 
+        justify-content: flex-start;
+        align-items: center;
+        margin: 0 auto; 
        }
    }
