--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,24 +3,28 @@
     max-width: 984px;
    }
 
-   @media screen and (max-width: 1024px) {
+   @media screen and (max-width: 1140px) {
     .places{
         margin: 0 48px;
-        max-width: 928px;
+        
       }
     }
 
-   @media screen and (max-width: 768px) {
+   @media screen and (max-width: 940px) {
     .places{
          margin: 0 24px;
-         max-width: 720px;
+         
        }
       }
 
-   @media screen and (max-width: 320px){
+   @media screen and (max-width: 740px){
     .places{
-        max-width: 320px;
-        margin: 64px 0 0; 
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-self: center;
+        align-self: center;
+        margin: 64px auto 0 ; 
       }
  
    }
