--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,34 +1,39 @@
 .cover__title{
+    position: absolute;
     max-width: 560px;
     margin: 0 auto;
     font-style: normal;
     font-weight: 900;
-    font-size: 72px;
+    font-size: 5.63vw;
     line-height: 106%;
     text-align: center;
+    top: 20.69vw;
     
     
    }
 
    @media screen and (max-width: 1024px){
     .cover__title{
-        margin: 0 232px;
-        font-size:7.03vw;
+        margin: 0 auto;
+        top: 19.04vw;
+        font-size: 7.03vw;
       }
    }
 
-   @media screen and (max-width: 990px){
+   @media screen and (max-width: 768px){
     .cover__title{
-        margin: 0 104px;
+        margin: 0 auto;
+        top: 14.97vw;
         font-size: 9.38vw;
       }
    }
 
-   @media screen and (max-width: 740px){
+   @media screen and (max-width: 700px){
     .cover__title{
-        margin: 0 16px;
-        font-size: 32px;
+        margin: 0 auto;
+        font-size: 10vw;
         line-height: 109%;
+        top: 35px;
         
       }
    }
