--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,33 +1,34 @@
 .cover{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
     max-width: 1184px;
-    background-image: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)) , url(../../images/__background.jpg);
-    background-size:cover;
-    z-index: 0;
-   
+    margin: 92px 48px 0;
    }
   
-   .cover:hover{
-    background-image: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)) , url(../../images/__background.jpg);
-   }
+   .cover__image:hover{
+    opacity: .3;
+}
 
-   @media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px){
     .cover{
-        width: 100%;
-        margin: 0;
-      }
+        
+        margin: 92px 0 0;
+        
+    }
 
-   }
+}
 
-   @media screen and (max-width: 740px){
+@media screen and (max-width: 768px){
     .cover{
-        width: 100%;
-        min-height: 200px;
-        margin-top: 66px;
-      }
-    
-   }
+        margin: 90px 0 0;
+        
+    }
+
+}
+
+@media screen and (max-width: 700px){
+    .cover{
+        margin: 2px 0 0;
+        
+        
+    }
+}
+
