--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,5 +3,11 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 114%;
+    max-width: 186px;
     
+   }
+   @media screen and (max-width: 600px){
+       .footer__copyright{
+           margin-top: 16px;
+       }
    }
