--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -12,10 +12,11 @@
     opacity: 0.8;
    }
 
-   @media screen and (max-width: 320px) {
+   @media screen and (max-width: 600px) {
     .footer__link{
      font-size: 24px;
      line-height: 100%;
+     margin-bottom: 32px;
     }
  
    }
