--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -7,9 +7,9 @@
   @media screen and (max-width: 600px){
     .footer__links{
       max-width: 600px;
-      min-height: 310px;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: flex-start;
       align-items: flex-start;
+      
     }
   }
