--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,7 +8,7 @@
 
    @media screen and (max-width: 768px) {
     .footer{
-      max-width: 720px;
+        max-width: 720px;
         margin: 88px 24px 24px;
       }
     }
@@ -17,7 +17,8 @@
         .footer{
             max-width:600px;
             flex-direction: column;
-            justify-content: space-around;
+            justify-content: flex-start;
             align-items: flex-start;
+            margin-top: 64px;
           }
     }
