--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -7,3 +7,9 @@
     margin-top: 40px;
     
    }
+
+   @media screen and (max-width: 768px){
+    .intro__text{
+      font-size: 2.08vw;
+    } 
+ }
