--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -11,15 +11,15 @@
 
    @media screen and (max-width: 768px){
     .intro{
-      margin-left: 24px;
+      margin: 88px 0 0 24px;
     }
 
    }
 
-   @media screen and (max-width: 320px){
+   @media screen and (max-width: 550px){
     .intro{
-      max-width: 288px;
-      margin: 0 16px;
+      max-width: 550px;
+      margin: 64px 16px 0;
      }
 
    }
