--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,6 +5,7 @@
     font-size: 10px;
     line-height: 140%;
     align-items: flex-start;
+    text-transform: uppercase;
     margin-top: 8px;
    }
 
