--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,7 +8,14 @@
     margin: 32px auto 0;
   } 
 
-  @media screen and (max-width: 320px){
+  @media screen and (max-width: 768px){
+    .lead__subtitle{
+      font-size: 3.91vw;
+    }
+
+  }
+
+  @media screen and (max-width: 450px){
     .lead__subtitle{
       max-width: 288px;
       margin-top: 16px;
