--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,7 +8,14 @@
     margin: 0 auto;
   }
 
-  @media screen and (max-width: 740px){
+  @media screen and (max-width: 768px){
+    .lead__title{
+      font-size: 12.5vw;
+    }
+
+  }
+
+  @media screen and (max-width: 450px){
     .lead__title{
       max-width: 288px;
       font-style: normal;
