--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,14 +1,11 @@
 .photo-grid{
   
     max-width: 1184px;
-    margin: 92px 48px 92px;
+    margin: 92px 42px 92px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-    grid-template-rows: repeat(3, 213px);
     column-gap: 16px;
     row-gap: 16px;
-    justify-items: stretch;
-    align-items: stretch;
     object-fit: cover;
     
     
@@ -16,37 +13,36 @@
 
   @media screen and (max-width: 1024px){
     .photo-grid{
+      max-width: 928px;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      grid-template-rows: repeat(4, 284px);
       column-gap: 14px;
       row-gap: 14px;
+      justify-items: center;
     }
 
   }
 
   @media screen and (max-width: 768px){
     .photo-grid{
-      
+      max-width: 720px;
       margin: 88px 24px 88px;
       grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
-      grid-template-rows: repeat(6, 264px);
+      column-gap: 16px;
+      row-gap: 16px;
+      
       
     }
 
   }
 
-  @media screen and (max-width: 320px){
+  @media screen and (max-width: 400px){
     .photo-grid{
-      margin: 64px 16px 0;
-      max-width: 320px;
-      height: auto;
-     /* grid-template-columns: minmax(288px, 1fr);
-      grid-template-rows: repeat(12, 216px);
-      row-gap: 12px;*/
-      display: flex;
-      flex-direction: column;
-      justify-items: center;
-      justify-items: center;
-      }
+      max-width: 400px;
+      margin: 64px 16px 64px ;
+      grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
+      column-gap: 14px;
+      row-gap: 14px;
+      
+      
 
   }
