--- a/blocks/places/__image/place__image.css
+++ b/blocks/places/__image/place__image.css
@@ -1,30 +1,30 @@
 .place__image{
     max-width: 460px;
     min-height: 460px;
-    margin: 0;
+    margin: 0 0 32px;
     object-fit: cover;
     object-position: center;
    }
 
-   @media screen and (max-width: 1140px) {
+   @media screen and (max-width: 1100px) {
     .place__image{
       max-width: 440px;
       min-height: 440px;
     }
 }
 
-@media screen and (max-width: 940px){
+@media screen and (max-width: 900px){
     .place__image{
         max-width: 340px;
         min-height: 340px;
       }
 }
 
-   @media screen and (max-width: 740px){
+   @media screen and (max-width: 700px){
     .place__image{
         width: 100%;
         height: 320px;
-        margin: 0 auto;
+        margin-bottom: 32px;
       }
    }
    
