--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,30 +1,44 @@
 .places{
-    margin: 0 148px;
     max-width: 984px;
+    margin: 0 148px;
+    display: grid;
+    grid-template-columns: 460px 484px;
+    column-gap: 40px;
+    row-gap: 48px;
    }
 
-   @media screen and (max-width: 1140px) {
+   @media screen and (max-width: 1100px) {
     .places{
+       
+        grid-template-columns: 440px 456px;
+        column-gap: 32px;
+        row-gap: 48px;
         margin: 0 48px;
         
       }
     }
 
-   @media screen and (max-width: 940px) {
+   @media screen and (max-width: 900px) {
     .places{
-         margin: 0 24px;
+      
+      grid-template-columns: 340px minmax(353px, 1fr);
+      column-gap: 28px;
+      row-gap: 48px;
+      margin: 0 24 72px;
          
        }
       }
 
-   @media screen and (max-width: 740px){
+   @media screen and (max-width: 700px){
     .places{
-        width: 100%;
+        
+        margin: 64px auto 66px ; 
+        column-gap: 0;
+        row-gap: 0;
         display: flex;
         flex-direction: column;
-        justify-self: center;
-        align-self: center;
-        margin: 64px auto 0 ; 
+        align-items: center ;
+        
       }
  
    }
