--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -6,12 +6,13 @@
     justify-content:flex-start;
     align-items: center;
     color: #FFFFFF;
-    ;
+    margin: 0 48px;
 }
 
 @media screen and (max-width: 1024px){
     .cover__link{
         width: 100vw;
+        margin: 0;
     }
 
 }
