--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,7 +1,7 @@
 .footer__copyright{
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
+    font-size: 1.09vw;
     line-height: 114%;
     max-width: 186px;
     
