--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -32,7 +32,6 @@
       
       
     }
-
   }
 
   @media screen and (max-width: 400px){
@@ -42,7 +41,6 @@
       grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
       column-gap: 14px;
       row-gap: 14px;
-      
-      
+    }
 
   }
