--- a/blocks/photo-grid/__image/photo-grid__image.css
+++ b/blocks/photo-grid/__image/photo-grid__image.css
@@ -1,4 +1,4 @@
-.photo-grid_image{
+.photo-grid__image{
     width: 100%;
     height: auto;
     object-fit: cover;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .photo-grid_image{
+    .photo-grid__image{
       width: 100%;
       height: auto;
       
@@ -15,7 +15,7 @@
 }
 
 @media screen and (max-width: 768px){
-    .photo-grid_image{
+    .photo-grid__image{
         width: 352px;
         height: 264px;
         
@@ -23,7 +23,7 @@
 }
 
    @media screen and (max-width: 400px){
-    .photo-grid_image{
+    .photo-grid__image{
         width: 288px;
         height: 216px;
         
