--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,4 +1,4 @@
-.places{
+.place{
     max-width: 984px;
     margin: 0 148px;
     display: grid;
@@ -8,7 +8,7 @@
    }
 
    @media screen and (max-width: 1100px) {
-    .places{
+    .place{
        
         grid-template-columns: 440px 456px;
         column-gap: 32px;
@@ -19,7 +19,7 @@
     }
 
    @media screen and (max-width: 900px){
-    .places{
+    .place{
       grid-template-columns: 340px minmax(353px, 1fr);
       column-gap: 28px;
       row-gap: 48px;
@@ -29,7 +29,7 @@
       }
 
    @media screen and (max-width: 700px){
-    .places{
+    .place{
         margin: 64px auto 66px;
         column-gap: 0;
         row-gap: 0;
