--- a/pages/index.css
+++ b/pages/index.css
@@ -25,9 +25,9 @@
 @import url(../blocks/intro/__list/intro__list.css);
 
 @import url(../blocks/photo-grid/photo-grid.css);
-@import url(../blocks/photo-grid/__image/photo-grid_image.css);
+@import url(../blocks/photo-grid/__image/photo-grid__image.css);
 
-@import url(../blocks/places/places.css);
+@import url(../blocks/places/place.css);
 @import url(../blocks/places/__website/place__website.css);
 @import url(../blocks/places/__title/place__title.css);
 @import url(../blocks/places/__image/place__image.css);
