--- a/pages/index.css
+++ b/pages/index.css
@@ -27,12 +27,12 @@
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__image/photo-grid__image.css);
 
-@import url(../blocks/places/place.css);
-@import url(../blocks/places/__website/place__website.css);
-@import url(../blocks/places/__title/place__title.css);
-@import url(../blocks/places/__image/place__image.css);
-@import url(../blocks/places/__article/place__article.css);
-@import url(../blocks/places/__store/place__store.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__article/place__article.css);
+@import url(../blocks/place/__store/place__store.css);
 
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__link/cover__link.css);
