--- a/blocks/cover/__image/cover__image.css
+++ b/blocks/cover/__image/cover__image.css
@@ -1,9 +1,9 @@
 .cover__image{
     position: relative;
-    width: 92.5vw;
+    width: 100%;
     height: auto;
     opacity: .7;
-    margin: 0 48px;
+    margin: 0;
    
     
 }
@@ -11,13 +11,5 @@
 .cover__image:hover{
     opacity: .3;
 }
-
-@media screen and (max-width: 1024px){
-    .cover__image{
-        width: 100vw;
-        margin: 0;
-    }
-}
-
 
 
