--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -6,13 +6,19 @@
     justify-content:flex-start;
     align-items: center;
     color: #FFFFFF;
-    margin: 0 48px;
+    margin: 0;
 }
 
 @media screen and (max-width: 1024px){
     .cover__link{
-        width: 100vw;
+       width: 100%;
         margin: 0;
     }
 
+}
+
+@media screen and (max-width: 768px){
+.cover__link{
+    
+}
 }
