--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -7,9 +7,9 @@
     row-gap: 48px;
    }
 
-   @media screen and (max-width: 1100px) {
+   @media screen and (max-width: 1160px) {
     .place{
-       
+        
         grid-template-columns: 440px 456px;
         column-gap: 32px;
         row-gap: 48px;
@@ -20,15 +20,16 @@
 
    @media screen and (max-width: 900px){
     .place{
-      grid-template-columns: 340px minmax(353px, 1fr);
+      
+      grid-template-columns: 340px 352px;
       column-gap: 28px;
       row-gap: 48px;
-      margin: 0 24 72px;
+      margin: 0 24px 72px;
          
        }
       }
 
-   @media screen and (max-width: 700px){
+   @media screen and (max-width: 764px){
     .place{
         margin: 64px auto 66px;
         column-gap: 0;
