--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,24 +1,17 @@
 .cover__link{
-    max-width: 1184px;
-    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content:flex-start;
+    justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
     color: #FFFFFF;
     margin: 0;
+    text-decoration: none;
+    background: rgba(0, 0, 0, 0.3);  
 }
 
-@media screen and (max-width: 1024px){
-    .cover__link{
-       width: 100%;
-        margin: 0;
-    }
-
+.cover__link:hover{
+    background: rgba(0, 0, 0, 0.8);  
 }
 
-@media screen and (max-width: 768px){
-.cover__link{
-    
-}
-}
