--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,26 +1,35 @@
 .cover{
+    
     max-width: 1184px;
     margin: 92px 48px 0;
+    background-image: url(../../images/__background.jpg);
+    background-size: cover;
+    object-position: center;
+    height: 740px;
+    
    }
   
-   .cover__image:hover{
-    opacity: .3;
-}
+  
+
 
 @media screen and (max-width: 1024px){
-    .cover{
-        
+    .cover{ 
         margin: 92px 0 0;
+        height: 640px;
         
     }
 
 }
+@media screen and (max-width: 768px){
+    .cover{
+        height: 480px;
+    }
+}
 
-
-@media screen and (max-width: 700px){
+@media screen and (max-width: 320px){
     .cover{
         margin: 2px 0 0;
-        
+        height: 200px;
         
     }
 }
