--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,13 +1,15 @@
 .footer__copyright{
     font-style: normal;
     font-weight: normal;
-    font-size: 1.09vw;
+    font-size: 14px;
     line-height: 114%;
     max-width: 186px;
+    margin: 0;
     
    }
    @media screen and (max-width: 600px){
        .footer__copyright{
            margin-top: 16px;
+           line-height: 100%;
        }
    }
