--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -9,3 +9,12 @@
     line-height: 117%;
     
   }
+
+  @media screen and (max-width: 750px){
+    .header__lang{
+      font-size: 18px;
+      line-height: 111%;
+    }
+     
+    }
+  }
