--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,11 +1,12 @@
 .lead__caption{
-    width: 158px;
+    
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
     line-height: 140%;
     align-items: flex-start;
     text-transform: uppercase;
+    letter-spacing: 0.15em;
     margin-top: 8px;
    }
 
