--- a/blocks/place/__store/place__store.css
+++ b/blocks/place/__store/place__store.css
@@ -3,7 +3,7 @@
     margin: 0 0 26px;
     font-style: normal;
     font-weight: normal;
-    font-size: 1.41vw;
+    font-size: 18px;
     line-height: 163%;
    }
 
@@ -16,7 +16,7 @@
 
    @media screen and (max-width: 900px){
     .place__store{
-        font-size: 2.08vw;
+        font-size: 16px;
     }
 
    }
