--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,13 +4,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    min-height: 740px;
     color: #FFFFFF;
     margin: 0;
     text-decoration: none;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(42, 44, 47, 0.3);
 }
 
 .cover__link:hover {
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(42, 44, 47, 0.8);
 }
