--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,26 +3,18 @@
     margin: 92px 48px 0;
     background-image: url(../../images/__background.jpg);
     background-size: cover;
-    object-position: center;
-    height: 740px;
+    background-position: center;
+    min-height: 740px;
 }
 
 @media screen and (max-width: 1024px) {
     .cover {
         margin: 92px 0 0;
-        height: 640px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .cover {
-        height: 480px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover {
-        margin: 2px 0 0;
-        height: 200px;
+        margin: 16px 0 0;
     }
 }
