--- a/blocks/place/__heading-url/place__heading-url.css
+++ b/blocks/place/__heading-url/place__heading-url.css
@@ -2,17 +2,18 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    width: 100%;
+    max-width: 352px;
+    margin: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .place__heading-url {
-        align-items: center;
+        margin: 0 16px 32px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__heading-url {
-        align-items: flex-start;
+        align-self: flex-start;
     }
 }
