--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -27,11 +27,17 @@
 
 @media screen and (max-width: 764px) {
     .place {
-        margin: 64px auto 66px;
+        margin: 0 16px 66px;
         column-gap: 0;
         row-gap: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .place {
+        margin: 0 0 50px;
     }
 }
