--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
-@import url(../blocks/body/body.css);
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/font.css);
+@import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__image/header__image.css);
@@ -16,9 +16,10 @@
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
-@import url(../blocks/intro/__list/__list-bold/intro__list-bold.css);
+@import url(../blocks/intro/__list-bold/intro__list-bold.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__image/photo-grid__image.css);
+@import url(../blocks/places/places.css);
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__heading-url/place__heading-url.css);
 @import url(../blocks/place/__heading/place__heading.css);
@@ -29,7 +30,6 @@
 @import url(../blocks/place/__store/place__store.css);
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__link/cover__link.css);
-@import url(../blocks/cover/__image/cover__image.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/footer/footer.css);
